fix image not showing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ header {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-img {
+.me img {
   display: none;
 }
 .logo {
